...
            Column {
                Text(
                    text = state.number1 + (state.operation?.symbol ?: "") + state.number2,
                    overflow = TextOverflow.Visible,
                    maxLines = 2,
                    textAlign = TextAlign.End,
                    modifier = Modifier.fillMaxWidth().testTag("display"),
                    color = white,
                    fontSize = 72.sp,
                    fontWeight = FontWeight.Medium,
                    lineHeight = 80.sp
                )
                Spacer(modifier = Modifier.height(20.dp))
...
